get user implemented
